MB-57064: Clean up temporary items when the expiry pager runs

Clean up tempDeleted and tempNonExistent items when the expiry pager
runs. Do _not_ update the expiration/ejection stats (MB-47952), just
remove the item from the HT.

We can observe temp items being cleaned up in the curr_temp_items stats.

Change-Id: Ie14ed44141e338e4a17394efb461786a906c8fe3
Reviewed-on: https://review.couchbase.org/c/kv_engine/+/191374
Well-Formed: Restriction Checker
Reviewed-by: Dave Rigby <daver@couchbase.com>
Tested-by: Vesko Karaganev <vesko.karaganev@couchbase.com>
Tested-by: Build Bot <build@couchbase.com>